--- a/src/contacts.html
+++ b/src/contacts.html
@@ -3,9 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Главная - ComputerWorld</title>
-    <meta name="description" content="Краткое описание главной страницы вашего сайта">
-    <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../assets/favicon.ico" type="image/x-icon">
     <title>Контакты - ComputerWorld</title>
     <meta name="description" content="Здесь можете найти все контакты нашей компании">
 </head>
