--- a/src/contacts.html
+++ b/src/contacts.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="../assets/favicon.ico" type="image/x-icon">
     <title>Контакты - ComputerWorld</title>
     <meta name="description" content="Здесь можете найти все контакты нашей компании">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
