--- a/src/contacts.html
+++ b/src/contacts.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,18 +8,21 @@
     <title>Контакты - ComputerWorld</title>
     <meta name="description" content="Здесь можете найти все контакты нашей компании">
     <link rel="stylesheet" href="styles.css">
+    <script src="main.js" defer></script>
 </head>
+
 <body>
-    <header>
-        <a href="/">ComputerWorld</a>
-        <!-- Главное меню навигации -->
-        <nav>
-            <ul>
-                <li><a href="index.html">Главная</a></li>
-                <li><a href="about.html">О нас</a></li>
-                <li><a href="contacts.html">Контакты</a></li>
+    <header class="site-header">
+        <a class="site-header__brand" href="/">ComputerWorld</a>
+        <nav class="site-nav" aria-label="Основная навигация">
+            <ul class="site-nav__list">
+                <li class="site-nav__item"><a class="site-nav__link" href="index.html">Главная</a></li>
+                <li class="site-nav__item"><a class="site-nav__link" href="about.html">О нас</a></li>
+                <li class="site-nav__item"><a class="site-nav__link" href="contacts.html">Связаться</a></li>
             </ul>
         </nav>
+
+        <button class="theme-toggle" type="button" aria-pressed="false">Тема</button>
     </header>
 
     <main>
@@ -36,6 +40,10 @@
         <section>
             <h2>Почты сотрудников</h2>
             <p>Перечисление почт сотрудников...</p>
+
+            <!-- Responsive изображение -->
+            <img src="../assets/2.jpg" alt="Наша команда специалистов" width="640" height="360" loading="lazy"
+                decoding="async" class="responsive-image">
         </section>
     </main>
 
@@ -44,4 +52,5 @@
         <p>Телефон: +7 (123) 456-78-90</p>
     </footer>
 </body>
+
 </html>
